styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: #FFFFFF;
  color: black
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.portrait {
  background-image: url("/profile-a.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  width: 23rem;
  height: 16rem;
  border-radius: 8rem;
  cursor: pointer;
  @media (min-width:1025px) {
    &:hover {
      background-image: url("/profile-b.jpg");
    }
  }

}

